<resources>
    <string name="app_name">Giotto</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="credentials_string">Credentials Required</string>
    <string name="title_activity_sensor">sensor</string>
    <string name="title_activity_devices">Devices</string>
    <string name="location_string">Select a Location</string>
    <string name="user_name_string">User</string>
    <string name="name">Name</string>
    <string name="pwd">Password</string>
    <string name="Enter">Log IN</string>
    <string name="toggleButton">On/Off</string>
    <string name="title_activity_check">Check</string>
    <string name="settings">Settings</string>
    <string name="title_activity_app_settings">AppSettings</string>
    <string name="finished">Finished</string>
    <string name="bdurl">BDURL</string>
    <string name="port">PORT</string>

</resources>
