<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dac_giotto.userCredentials"
    android:id="@+id/activity_user_credentials">

    <TextView android:text="@string/credentials_string" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/credentials"
        android:textSize="30sp"
        android:textColor="#FFBB66" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/user_name"
        android:layout_below="@+id/credentials"
        android:layout_alignRight="@+id/credentials"
        android:layout_marginTop="68dp"
        android:hint="@string/name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/user_password"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/user_name"
        android:hint="@string/pwd" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Enter"
        android:id="@+id/credentials_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp" />

</RelativeLayout>
