<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.giotto.AppSettings">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bdurl"
        android:inputType="none"
        android:text="@string/bdurl"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bdport"
        android:inputType="none"
        android:text="@string/port"
        android:layout_below="@+id/textView3"
        android:layout_toLeftOf="@+id/finished" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished"
        android:id="@+id/finished"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="BD URL:"
        android:id="@+id/textView2"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="BD PORT:"
        android:id="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bdurl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="CLIENT ID:"
        android:id="@+id/textView4"
        android:layout_below="@+id/bdport"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/client_id"
        android:inputType="none"
        android:text="WO5xB2VyEfsQQRz6hhxC8Mucq47x3rmUcwFIPDG9"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="CLIENT SECRET:"
        android:id="@+id/textView5"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/client_secret"
        android:inputType="none"
        android:text="B3FMqZhXVzTiPrJq6h3Da3YBCwxrpaDPnR4vldZqVnhlPNl9MY"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true" />

</RelativeLayout>
